--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>To-do: write content</div>
-        
+        <div>
+            <h1>To-do list</h1>
+            <input id='todo' type='text' placeholder='Add to-do' />
+            <button id='todoButton'>Add to-do</button>
+            <ul id='todos'></ul>
+        </div>
+        <div>
+            <h1>Goals</h1>
+            <input id='goal' type='text' placeholder='Add goal' />
+            <button id='goalButton'>Add goal</button>
+            <ul id='goals'></ul>
+        </div>
         <script type='text/javascript'>
             //Library
             function createStore(reducer){
